# yt-history-rag

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  brief.md  pyproject.toml
.github/: ISSUES_READY.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: PRD.md
docs/adr/: 0001-graph-rag-for-ontology-and-provenance.md  0002-transcript-extraction-via-yt-dlp.md  0003-openrouter-for-concept-extraction.md
src/yt_rag/: cli.py  concepts.py  config.py  oauth.py  transcript.py  youtube_api.py
tests/: test_cli.py  test_concepts.py  test_config.py  test_oauth.py  test_sync_state.py  test_transcript.py  test_youtube_api.py
