[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-history-rag"
version = "0.1.0"
description = "GraphRAG knowledge retrieval from your YouTube watch history"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Mueed Hussain", email = "mueedhussain7@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "llama-index>=0.9.0",
    "chromadb>=0.4.0",
    "neo4j>=5.0.0",
    "yt-dlp>=2024.0.0",
    "sentence-transformers>=2.2.0",
    "apscheduler>=3.10.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "black==24.1.1",
    "ruff==0.2.0",
    "mypy==1.8.0",
]

[project.scripts]
yt-rag = "yt_rag.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
